Improve testing (#35)
* Fixed query in create_new_for_all_groups()

The function create_new_for_all_groups() in model/news_item.py used
a overcomplex function that queries for OSINTSourceGroup.
This commit replaces that function in favor of
OSINTSourceGroup.get_for_osint_source(news_item_data.osint_source_id)

* Introduced tests for the Assess-API

This commit introduces some tests for the assess-api.

* Improved openapi-schema

This commit adds descriptions for the assess/news-aggregates-api

* Add fixtures for core-tests

This commit adds some fixtures for the core-tests.

* Added a volatile testing-database

This commit adds the package pytest-flask-sqlalchemy to the core.
This package adds support for volatile databases that get deleted
after use.

* fixed datetime.format-issues in assess-tests

* minor changes TestAssessAPI

* fixed NewsItem.get_by_group()

* fixed style in core/tests/functional/test_assess.py
removed unused code
removed debugging line

* fixed issues in core/tests/conftest.py

* added tests for assess api NewsItemAggregatesTags

* added tests for the parameters of assess-api NewsItemAggregatesTags
